--- a/.github/workflows/java-maven-build-and-test.yml
+++ b/.github/workflows/java-maven-build-and-test.yml
@@ -23,41 +23,44 @@ on:
         type: string
 
 jobs:
-  java-build-test:
+  Checkout:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       
-      - name: Setup JDK ${{ inputs.java-version }} 
-        uses: actions/setup-java@v3
+  SetupJDK:
+    needs: Checkout
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo Setup JDK ${{ inputs.java-version }} 
+      - uses: actions/setup-java@v3
         with:
           java-version: ${{ inputs.java-version }}
           distribution: ${{ inputs.distribution }} 
           cache: maven # Memorizar dependências
 
-        
-        ##### BUILD #####
-      - name: Build
-        id: build-with-settings
+  Build:
+    needs: SetupJDK
+    runs-on: ubuntu-latest
+    steps:
+      - id: build-with-settings
         if: inputs.maven-settings-file != null
         run: mvn -s $GITHUB_WORKSPACE/.github/workflows/${{ inputs.maven-settings-file }} -B package --file ${{ inputs.pom-path }} -DskipTests
         
-      - name: Build
-        id: build-without-settings
+      - id: build-without-settings
         if: inputs.maven-settings-file == null
         run: mvn -B package --file ${{ inputs.pom-path }} -DskipTests
 
-        
-        #### TESTS #####
-      - name: Test
-        id: test-with-settings
+  Test:
+    needs: Build
+    runs-on: ubuntu-latest
+    steps:
+      - id: test-with-settings
         if: inputs.maven-settings-file != null
         run: mvn -s $GITHUB_WORKSPACE/.github/workflows/maven-settings.xml test --file ${{ inputs.pom-path }} 
 
-      - name: Test
-        id: test-without-settings
+      - id: test-without-settings
         if: inputs.maven-settings-file == null
         run: mvn test --file ${{ inputs.pom-path }}
