--- a/.github/workflows/java-maven-pmd-check-rules.yml
+++ b/.github/workflows/java-maven-pmd-check-rules.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Run PMD Check Rules
+      - name: Run PMD Rules
         uses: pmd/pmd-github-action@v1
         id: pmd-check
         with:
@@ -36,14 +36,13 @@ jobs:
           rulesets: ${{ inputs.rulesets }}
           analyzeModifiedFilesOnly: false
 
-      - name: No PMD Rules Violation
-        if: steps.pmd-check.outputs.violations == 0
+      - name: Check PMD Rules Violation
         run: |
-          echo "No violation of the PMD Rules. Congratulations! :)"         
-
-      - name: PMD Rules Violations
-        if: steps.pmd-check.outputs.violations != 0
-        run: |
-          echo "Number of Violations: ${{ steps.pmd-check.outputs.violations }} - (Must be Zero!!!)"
-          echo "Check previous step for more details!!!"
-          exit 1
+          if [[ ${{ steps.pmd-check.outputs.violations }} == 0 ]]; then
+            echo "No violation of the PMD Rules. Congratulations! :)"
+          else
+            echo "Attention: ${{ steps.pmd-check.outputs.violations }} PMD rules violations!!!"
+            echo "Check previous step for more details!!!"
+            echo "To continue, no violation is required"
+            exit 1
+          fi
