--- a/.github/workflows/sonarcloud-java-maven.yml
+++ b/.github/workflows/sonarcloud-java-maven.yml
@@ -11,14 +11,9 @@ on:
         default: null
         required: true
         type: string
-    secrets:
-      github-token:
-        required: true
-      sonar-token:
-        required: true
 
 jobs:
-  sonar-analyze: 
+  sonarcloud-java-maven: 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -31,24 +26,24 @@ jobs:
           distribution: temurin 
           cache: maven # Memorizar dependências
 
-      - name: Cache SonarCloud packages
+      - name: Cache SonarCloud Packages
         uses: actions/cache@v3
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
-      - name: Cache Maven packages
+      - name: Cache Maven Packages
         uses: actions/cache@v3
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Build and analyze
+      - name: Analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.github-token }}
-          SONAR_TOKEN: ${{ secrets.sonar-token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           echo "Change directory..."
           cd app
