--- a/.github/workflows/sonarcloud-java-maven.yml
+++ b/.github/workflows/sonarcloud-java-maven.yml
@@ -1,5 +1,3 @@
-name: Java Maven Sonar Analyse
-
 on:
   workflow_call:
     inputs:
@@ -45,6 +43,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          echo "Change directory..."
+          echo "changing to app directory..."
           cd app
           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=${{ inputs.projectKey }}
