--- a/.github/workflows/open-pr-to-main.yml
+++ b/.github/workflows/open-pr-to-main.yml
@@ -37,7 +37,7 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: steps.extract_branch.outputs.branch
+          branch: ${{ steps.extract_branch.outputs.branch }}
           title: ${{ inputs.title }}
           commit-message: ${{ inputs.commit-message }}
           body: ${{ inputs.body }}
