--- a/.github/workflows/cd-java-maven.yml
+++ b/.github/workflows/cd-java-maven.yml
@@ -52,6 +52,8 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ github.token }}
+          USER_NAME: ${{ secrets.USER_NAME }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       
       - name: Delete Old Package Versions
         uses: actions/delete-package-versions@v4
