--- a/.github/workflows/open-pr-to-main.yml
+++ b/.github/workflows/open-pr-to-main.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           gh pr edit ${{ steps.extract_branch.outputs.branch }} \
           --title '[auto-generated] Merge ${{ steps.extract_branch.outputs.branch }} into ${{ inputs.base_branch }}' \
-          --body '${{ inputs.body }}' || \
+          --body '${{ inputs.body }}' && gh pr reopen ${{ steps.extract_branch.outputs.branch }} || \
           gh pr create -B ${{ inputs.base_branch }} -H ${{ steps.extract_branch.outputs.branch }}  \
           --title '[auto-generated] Merge ${{ steps.extract_branch.outputs.branch }} into ${{ inputs.base_branch }}' \
           --body '${{ inputs.body }}'
