--- a/.github/workflows/open-pr-to-main.yml
+++ b/.github/workflows/open-pr-to-main.yml
@@ -31,15 +31,16 @@ jobs:
         run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
         id: extract_branch
 
-      - name: Create/Update Pull Request
+      - name: Create Pull Request
         run: |
-          if [[ gh pr list --state open --base ${{ inputs.base_branch }} --head ${{ steps.extract_branch.outputs.branch }} | wc -l > 0 ]]; then
-            echo "Pull Request already open!"
-            exit 0
-          else
+          gh pr list --state open --base ${{ inputs.base_branch }} --head ${{ steps.extract_branch.outputs.branch }} | wc -l
+          if [[ $? == 0 ]]; then
+            echo "Create PR"
             gh pr create -B ${{ inputs.base_branch }} -H ${{ steps.extract_branch.outputs.branch }}  \
             --title '[auto-generated] Merge ${{ steps.extract_branch.outputs.branch }} into ${{ inputs.base_branch }}' \
             --body '${{ inputs.body }}'
+          else 
+            echo "PR already exists" 
           fi
         # run: |
         #   gh pr edit ${{ steps.extract_branch.outputs.branch }} \
