--- a/.github/workflows/cd-java-maven.yml
+++ b/.github/workflows/cd-java-maven.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: admin
+      packages: write
     
     steps:
       - name: Checkout
